2011-09-19  Abhi Yerra  <abhi@berkeley.edu>
	* lisp/bbdb.el (bbdb-dial-function): New variable.
	(bbdb-sound-player, bbdb-sound-files, bbdb-modem-dial)
	(bbdb-modem-device, bbdb-sound-volume): Removed (obsolete).

	* lisp/bbdb-com.el (bbdb-dial-number): Use browse-url and
	bbdb-dial-function.
	(bbdb-play-sound): Removed (obsolete)

2011-09-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-dial): First remove extension.  Simplify.

2011-09-19  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-version): Do not use interactive-p.

	* lisp/bbdb-message.el: Require sendmail for mail-mode-map.

	* lisp/bbdb-anniv.el (number): Use with-no-warnings.

	* lisp/bbdb-com.el (bbdb-divide-name): Fix regexp for matching
	last name prefixes.

2011-05-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Fix previous patch.
	(bbdb-prompt-for-create): Use special-mode.

2011-05-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-notice-mail-hook): Rename from
	bbdb-notice-hook.
	(bbdb-notice-record-hook): New variable.
	(bbdb-notice-hook-pending): Update doc string.

	* lisp/bbdb-mua.el (bbdb-update-records): Call
	bbdb-notice-record-hook.
	(bbdb-annotate-message): Use bbdb-notice-mail-hook.

	* lisb/bbdb-vm.el (bbdb/vm-auto-add-label): Update doc string.

2011-05-08  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-display-all-records): Use redisplay.  Why
	needed?

2011-05-08  Leo  <sdl.web@gmail.com>
	* lisp/bbdb-com.el (bbdb-merge-records-internal): Fix typo

2011-05-08  Leo  <sdl.web@gmail.com>
	* lisp/bbdb-mua.el (bbdb-auto-notes): Fix typo

2011-05-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-display-current-record): New command.
	(bbdb-display-all-records): Improve docstring.

	* lisp/bbdb.el (bbdb-mode-map): Key bindings for
	bbdb-display-all-records and bbdb-display-current-record.

2011-04-29  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/bbdb.el (bbdb-init-forms): Fix typo.