@@ -1417,15 +1417,15 @@ APPEND and INVERT appear in the message area.")
 
     ;; Search keys
     (define-key km "b"          'bbdb)
-    (define-key km "S1"         'bbdb-display-records)
-    (define-key km "Sn"         'bbdb-search-name)
-    (define-key km "So"         'bbdb-search-organization)
-    (define-key km "Sp"         'bbdb-search-phone)
-    (define-key km "Sa"         'bbdb-search-address)
-    (define-key km "Sm"         'bbdb-search-mail)
-    (define-key km "SN"         'bbdb-search-notes)
-    (define-key km "Sc"         'bbdb-search-changed)
-    (define-key km "Sd"         'bbdb-search-duplicates)
+    (define-key km "/1"         'bbdb-display-records)
+    (define-key km "/n"         'bbdb-search-name)
+    (define-key km "/o"         'bbdb-search-organization)
+    (define-key km "/p"         'bbdb-search-phone)
+    (define-key km "/a"         'bbdb-search-address)
+    (define-key km "/m"         'bbdb-search-mail)
+    (define-key km "/N"         'bbdb-search-notes)
+    (define-key km "/c"         'bbdb-search-changed)
+    (define-key km "/d"         'bbdb-search-duplicates)
     (define-key km "\C-xnw"     'bbdb-display-all-records)
     (define-key km "\C-xnd"     'bbdb-display-current-record)
 
