@@ -1,3 +1,6 @@
+2011-09-19  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-mode-map): Use / as search prefix.
+
 2011-09-19  Abhi Yerra  <abhi@berkeley.edu>
 	* lisp/bbdb.el (bbdb-dial-function): New variable.
 	(bbdb-sound-player, bbdb-sound-files, bbdb-modem-dial)
